2011-05-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl

	* src/algebra/files.spad.pamphlet: Do not use RPACKFILE.

2011-05-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl

	* src/algebra/Makefile.in: Stop build on error in
	recursive make.

2011-05-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intalg.spad.pamphlet,
	src/algebra/efupxs.spad.pamphlet,
	src/algebra/curve.spad.pamphlet,
	src/algebra/efstruc.spad.pamphlet: Changes to speed
	up compilation.


2011-05-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/boot/tytree1.boot: Fix build with newer sbcl.

2011-05-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/apply.boot, src/interp/slam.boot,
	src/interp/nruncomp.boot, src/interp/compiler.boot,
	src/interp/bootlex.lisp, src/interp/define.boot,
	src/interp/lisplib.boot, src/interp/package.boot,
	src/interp/spad.lisp: Misc cleanups.
	src/interp/def.lisp: Remove.


2011-04-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-coerce.boot, src/interp/debug.lisp,
	src/interp/nrungo.boot, src/interp/bootlex.lisp,
	src/interp/macros.lisp, src/interp/vmlisp.lisp:
	Misc cleanups.

2011-04-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/boot/ptyout.boot: Add source as comments to the
	output of BOOTCLAM.

2011-04-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-search.boot, src/interp/clam.boot,
	src/interp/i-toplev.boot, src/interp/Makefile.in:
	Fix recent breakage.

2011-04-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/postpar.boot, src/interp/property.lisp,
	src/interp/compiler.boot, src/interp/Makefile.in,
	src/interp/g-boot.boot, src/interp/spad.lisp:
	Remove old Boot.


2011-04-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/outform.spad.pamphlet,
	src/interp/record.boot, src/interp/c-doc.boot,
	src/interp/nlib.lisp, src/interp/sys-pkg.lisp,
	src/interp/br-saturn.boot, src/interp/Makefile.in,
	src/interp/util.lisp, src/interp/i-output.boot,