@@ -1,3 +1,8 @@
+2011-05-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl
+
+	* src/interp/comp.lisp, src/interp/g-boot.boot,
+	src/interp/macros.lisp: Simplify compilation of iterators.
+
 2011-05-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl
 
 	* src/algebra/files.spad.pamphlet: Do not use RPACKFILE.
